# -Voight-Kampff-test

./: README.md
cmacleod_work/application_code/: CMakeLists.txt  VisualizeEvent.cpp  VisualizeEvent.h  inputLoader.cpp  inputLoader.h  main.cpp
cmacleod_work/application_code/data/: event_data.csv
